code/python/StreetAccountNews/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# StreetAccount News client library for Python

[![API Version](https://img.shields.io/badge/api-v0.1.0-blue)](https://developer.factset.com/api-catalog/streetaccount-news-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.StreetAccountNews)](https://pypi.org/project/fds.sdk.StreetAccountNews/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The StreetAccount News API provides access to FactSet's proprietary news provider, StreetAccount. StreetAccount, is a premium real-time market intelligence news service that delivers comprehensive U.S., Canadian, and European coverage (and expanding Asia coverage). All possible sources for corporate news are scanned and key story facts are highlighted and presented in an easy-to-read format.

**StreetAccount Filters, Headlines, and Views:**

These endpoints allow for the retrieval of news headlines using filters such as Watchlists/Indices/Tickers, Company Filters, Market Topics, Regions, and Sectors.  Headlines can also be retrieved based on saved views within the Workstation.

**StreetAccount Historical Stories:**

These endpoints provide access to historical StreetAccount (SA) news. The API delivers SA stories in XML format based on user-specified date input parameters. Output files are securely available to users through a URL. This API has three endpoints: Request Files, Check Status, and Get Files.

Please note that this API only supports adhoc requests for historical files and does not support real-time files. If real-time push is required, consider using other methods such as SFTP, QNT account, or Azure Storage. Both historical and real-time Street Account news can be delivered via SFTP, QNT account, or Azure Storage.

The files delivered contain both metadata and content body, eliminating the need for multiple requests through multiple services to retrieve all the information.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- SDK version: 0.20.5
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.StreetAccountNews==0.20.5
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.StreetAccountNews==0.20.5
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.StreetAccountNews
from fds.sdk.StreetAccountNews.api import filters_api
from fds.sdk.StreetAccountNews.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.StreetAccountNews.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.StreetAccountNews.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.StreetAccountNews.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = filters_api.FiltersApi(api_client)
    structured = True # bool | Pass structured to generate a structured view of the available filters. (optional)
    flattened = True # bool | Pass flattened to generate a structured view of the available filters. (optional)

    try:
        # Retrieve all StreetAccount filters
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_street_account_filters(structured=structured, flattened=flattened)

        pprint(api_response)
    except fds.sdk.StreetAccountNews.ApiException as e:
        print("Exception when calling FiltersApi->get_street_account_filters: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Retrieve all StreetAccount filters
    #     api_response, http_status_code, response_headers = api_instance.get_street_account_filters_with_http_info(structured=structured, flattened=flattened)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.StreetAccountNews.ApiException as e:
    #     print("Exception when calling FiltersApi->get_street_account_filters: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Retrieve all StreetAccount filters
    #     async_result = api_instance.get_street_account_filters_async(structured=structured, flattened=flattened)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.StreetAccountNews.ApiException as e:
    #     print("Exception when calling FiltersApi->get_street_account_filters: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Retrieve all StreetAccount filters
    #     async_result = api_instance.get_street_account_filters_with_http_info_async(structured=structured, flattened=flattened)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.StreetAccountNews.ApiException as e:
    #     print("Exception when calling FiltersApi->get_street_account_filters: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.StreetAccountNews

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.StreetAccountNews.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.StreetAccountNews

configuration = fds.sdk.StreetAccountNews.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.StreetAccountNews

configuration = fds.sdk.StreetAccountNews.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.StreetAccountNews

configuration = fds.sdk.StreetAccountNews.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/research/news/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FiltersApi* | [**get_street_account_filters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FiltersApi.md#get_street_account_filters) | **GET** /streetaccount/filters | Retrieve all StreetAccount filters
*HeadlinesApi* | [**get_street_account_headlines**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/HeadlinesApi.md#get_street_account_headlines) | **POST** /streetaccount/headlines | Retrieve StreetAccount headlines for given filters
*HeadlinesApi* | [**get_street_account_headlines_by_view**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/HeadlinesApi.md#get_street_account_headlines_by_view) | **POST** /streetaccount/views/{id}/headlines | Retrieve StreetAccount headlines for given view
*StreetAccountHistoricalStoriesApi* | [**streetaccount_historical_check_status_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccount_historical_check_status_get) | **GET** /streetaccount/historical/check-status | Returns the status and percentage of completion for the requested jobID
*StreetAccountHistoricalStoriesApi* | [**streetaccount_historical_get_files_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccount_historical_get_files_get) | **GET** /streetaccount/historical/get-files | Returns the StreetAccount XML files for the specified date range
*StreetAccountHistoricalStoriesApi* | [**streetaccount_historical_request_files_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccount_historical_request_files_get) | **GET** /streetaccount/historical/request-files | Returns the jobID
*ViewsApi* | [**create_street_account_view**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ViewsApi.md#create_street_account_view) | **POST** /streetaccount/views/{id} | Creates and saves a StreetAccount view
*ViewsApi* | [**delete_street_account_view**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ViewsApi.md#delete_street_account_view) | **DELETE** /streetaccount/views/{id} | Deletes an existing StreetAccount view
*ViewsApi* | [**edit_street_account_view**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ViewsApi.md#edit_street_account_view) | **PUT** /streetaccount/views/{id} | Edits and saves an existing StreetAccount view
*ViewsApi* | [**get_street_account_views**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ViewsApi.md#get_street_account_views) | **GET** /streetaccount/views | Retrieves StreetAccount search views


## Documentation For Models

 - [Checkstatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/Checkstatus.md)
 - [CheckstatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CheckstatusResponse.md)
 - [CreateEditDeleteViewResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateEditDeleteViewResponse.md)
 - [CreateEditDeleteViewResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateEditDeleteViewResponseData.md)
 - [CreateEditDeleteViewResponseDataMessage](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateEditDeleteViewResponseDataMessage.md)
 - [CreateOrEditViewBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateOrEditViewBody.md)
 - [CreateOrEditViewBodyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateOrEditViewBodyData.md)
 - [CreateOrEditViewTickers](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/CreateOrEditViewTickers.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/Error.md)
 - [ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ErrorObject.md)
 - [FilterResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FilterResponse.md)
 - [FilterResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FilterResponseData.md)
 - [FlattenedFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFilters.md)
 - [FlattenedFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFiltersCategoriesObject.md)
 - [FlattenedFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFiltersRegionsObject.md)
 - [FlattenedFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFiltersSectorsObject.md)
 - [FlattenedFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFiltersTopicsObject.md)
 - [FlattenedFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/FlattenedFiltersWatchlistsObject.md)
 - [Getfiles](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/Getfiles.md)
 - [GetfilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/GetfilesResponse.md)
 - [IsPartialOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/IsPartialOne.md)
 - [MetaOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/MetaOne.md)
 - [PaginationOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/PaginationOne.md)
 - [RequestfilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/RequestfilesResponse.md)
 - [SaHeadlinesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequest.md)
 - [SaHeadlinesRequestByView](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestByView.md)
 - [SaHeadlinesRequestByViewData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestByViewData.md)
 - [SaHeadlinesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestData.md)
 - [SaHeadlinesRequestDataSearchDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestDataSearchDate.md)
 - [SaHeadlinesRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestMeta.md)
 - [SaHeadlinesRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestMetaPagination.md)
 - [SaHeadlinesRequestTickersObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SaHeadlinesRequestTickersObject.md)
 - [SearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SearchResponse.md)
 - [SearchResponseArrayObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SearchResponseArrayObject.md)
 - [SearchResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SearchResponseData.md)
 - [SearchResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SearchResponseMeta.md)
 - [SearchResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/SearchResponseMetaPagination.md)
 - [StreetAccountStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StreetAccountStatus.md)
 - [StructuredFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFilters.md)
 - [StructuredFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersCategoriesObject.md)
 - [StructuredFiltersChildrenObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersChildrenObject.md)
 - [StructuredFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersRegionsObject.md)
 - [StructuredFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersSectorsObject.md)
 - [StructuredFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersTopicsObject.md)
 - [StructuredFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/StructuredFiltersWatchlistsObject.md)
 - [Views](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/Views.md)
 - [ViewsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/StreetAccountNews/v0/docs/ViewsObject.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.StreetAccountNews.apis and fds.sdk.StreetAccountNews.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.StreetAccountNews.api.default_api import DefaultApi`
- `from fds.sdk.StreetAccountNews.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.StreetAccountNews
from fds.sdk.StreetAccountNews.apis import *
from fds.sdk.StreetAccountNews.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

